<resources>
    <string name="app_name">Pet Care</string>
    <string name="select_profile_image">Select Profile Image</string>
    <string name="agenda">Agenda</string>
    <string name="my_pets">My Pets</string>
    <string name="my_veterinarians">My Veterinarians</string>
    <string name="resources">Resources</string>
    <string name="cat">Cats</string>
    <string name="dogs">Dogs</string>
    <string name="reptiles">Reptiles</string>
    <string name="birds">Birds</string>
    <string name="tips">Tips</string>
    <string name="feeding_tips">Feeding tips</string>
    <string name="grooming">Grooming</string>
    <string name="add_new_vet">Add New Vet</string>
    <string name="save">Save</string>
    <string name="clinic">Clinic</string>
    <string name="phone">Phone</string>
    <string name="address">Address</string>
    <string name="name">Name</string>
    <string name="cancel">Cancel</string>
    <string name="mypets">MyPets</string>
    <string name="add_new_pet">Add New Pet</string>
    <string name="breed">Breed</string>
    <string name="date_of_birth">Date of Birth</string>
    <string name="allergies">Allergies</string>
    <string name="gender">Gender</string>
    <string name="male">Male</string>
    <string name="female">Female</string>
    <string name="yes">Yes</string>
    <string name="no">No</string>
    <string name="sterlization">Sterlization</string>
    <string name="pettype">Pet Type</string>
    <string name="dog">Dog</string>
    <string name="sex">Sex</string>
</resources>