<?xml version="1.0" encoding="utf-8"?>
<layout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    tools:context=".ui.dashboard.MainActivity">

    <androidx.constraintlayout.widget.ConstraintLayout

        android:layout_width="match_parent"
        android:background="@drawable/gradient1"
        android:layout_height="match_parent"
        >
        <LinearLayout
            android:id="@+id/toolbar"
            android:layout_width="match_parent"
            android:layout_height="@dimen/_40sdp"
            android:orientation="horizontal"
            android:background="#FFE4E1"
            android:elevation="@dimen/_10sdp"
            app:layout_constraintTop_toTopOf="parent">

            <ImageView
                android:id="@+id/menu"
                android:layout_width="@dimen/_30sdp"
                android:layout_height="@dimen/_30sdp"
                android:layout_alignParentLeft="true"
                android:layout_centerVertical="true"
                android:layout_gravity="center"
                android:layout_marginLeft="@dimen/_10sdp"
                />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:layout_centerVertical="true"
                android:layout_marginLeft="@dimen/_15sdp"
                android:layout_toRightOf="@+id/back"
                android:layout_weight="1"
                android:gravity="center"
                android:textColor="@color/black"
                style="@style/Medium.Text"
                android:text="@string/app_name"
                android:textStyle="bold" />

            <de.hdodenhof.circleimageview.CircleImageView
                android:id="@+id/profile"
                android:layout_width="@dimen/_36sdp"
                android:layout_height="@dimen/_36sdp"
                android:layout_marginRight="@dimen/_10sdp"
                android:layout_alignParentRight="true"
                android:layout_centerVertical="true" />

        </LinearLayout>


        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:orientation="vertical"
            app:layout_constraintTop_toBottomOf="@+id/toolbar">


            <LinearLayout
                android:id="@+id/mipet"
                android:layout_width="match_parent"
                android:layout_height="110dp"
                android:layout_gravity="center"

                android:layout_margin="@dimen/_10sdp"
                android:background="@drawable/background"
                android:elevation="@dimen/_5sdp"
                android:gravity="center"
                android:orientation="horizontal"
                android:weightSum="2">

                <ImageView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_margin="@dimen/_5sdp"
                    android:layout_weight="1.3"
                    android:src="@drawable/mypet"
                    app:tint="#cc99a2">

                </ImageView>

                <TextView
                    style="@style/Small.Text"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_weight=".7"
                    android:gravity="center"
                    android:text="@string/my_pets"
                    android:textColor="@color/black">

                </TextView>


            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="110dp"
                android:layout_gravity="center"
                android:layout_margin="@dimen/_10sdp"
                android:id="@+id/mivet"
                android:background="@drawable/background"
                android:elevation="@dimen/_5sdp"
                android:gravity="center"
                android:orientation="horizontal"
                android:weightSum="2">

                <ImageView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_margin="@dimen/_5sdp"
                    android:layout_weight="1.3"
                    android:src="@drawable/myvet"
                    app:tint="#cc99a2">

                </ImageView>

                <TextView
                    style="@style/Small.Text"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_weight=".7"
                    android:gravity="center"
                    android:text="@string/my_veterinarians"
                    android:textColor="@color/black">

                </TextView>


            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="110dp"
                android:layout_gravity="center"
                android:id="@+id/resources"

                android:layout_margin="@dimen/_10sdp"
                android:background="@drawable/background"
                android:elevation="@dimen/_5sdp"
                android:gravity="center"
                android:orientation="horizontal"
                android:weightSum="2">

                <ImageView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_margin="@dimen/_5sdp"
                    android:layout_weight="1.3"
                    android:src="@drawable/resources"
                    app:tint="#cc99a2">

                </ImageView>

                <TextView
                    style="@style/Small.Text"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_weight=".7"
                    android:gravity="center"
                    android:text="@string/resources"
                    android:textColor="@color/black">

                </TextView>


            </LinearLayout>

            <LinearLayout
                android:id="@+id/agenda"
                android:layout_width="match_parent"
                android:layout_height="110dp"

                android:layout_gravity="center"
                android:layout_margin="@dimen/_10sdp"

                android:background="@drawable/background"
                android:elevation="@dimen/_5sdp"
                android:gravity="center"
                android:orientation="horizontal"
                android:weightSum="2">

                <ImageView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_margin="@dimen/_5sdp"
                    android:layout_weight="1.3"
                    android:src="@drawable/agenda"
                    app:tint="#cc99a2">

                </ImageView>

                <TextView
                    style="@style/Small.Text"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_weight=".7"
                    android:gravity="center"
                    android:text="@string/agenda"
                    android:textColor="@color/black">

                </TextView>


            </LinearLayout>



        </LinearLayout>

    </androidx.constraintlayout.widget.ConstraintLayout>
</layout>
