<?xml version="1.0" encoding="utf-8"?>
<layout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    >

    <androidx.constraintlayout.widget.ConstraintLayout

        android:layout_width="match_parent"
        android:background="@drawable/gradient1"
        android:layout_height="match_parent"
        >
        <LinearLayout
            android:id="@+id/toolbar"
            android:layout_width="match_parent"
            android:layout_height="@dimen/_40sdp"
            android:orientation="horizontal"
            android:background="#FFE4E1"
            android:elevation="@dimen/_10sdp"
            app:layout_constraintTop_toTopOf="parent">

            <ImageView
                android:id="@+id/menu"
                android:layout_width="@dimen/_30sdp"
                android:layout_height="@dimen/_30sdp"
                android:layout_alignParentLeft="true"
                android:layout_centerVertical="true"
                android:layout_gravity="center"
                android:layout_marginLeft="@dimen/_10sdp"
                />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:layout_centerVertical="true"
                android:layout_marginLeft="@dimen/_15sdp"
                android:layout_toRightOf="@+id/back"
                android:layout_weight="1"
                android:gravity="center"
                android:textColor="@color/black"
                style="@style/Medium.Text"
                android:text="@string/add_new_pet"
                android:textStyle="bold" />

            <de.hdodenhof.circleimageview.CircleImageView
                android:layout_width="@dimen/_36sdp"
                android:layout_height="@dimen/_36sdp"
                android:layout_marginRight="@dimen/_10sdp"
                android:layout_alignParentRight="true"
                android:layout_centerVertical="true" />

        </LinearLayout>

        <ScrollView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            app:layout_constraintTop_toBottomOf="@+id/toolbar">

            <androidx.constraintlayout.widget.ConstraintLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                app:layout_constraintTop_toBottomOf="@+id/toolbar">

                <LinearLayout
                    android:id="@+id/linlogo"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_centerHorizontal="true"
                    android:orientation="vertical"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toTopOf="parent">


                    <ImageView
                        android:layout_width="100dp"
                        android:layout_height="100dp"
                        android:layout_gravity="center"
                        android:scaleType="centerCrop"
                        android:src="@drawable/icon"
                        app:tint="#cc99a2" />


                </LinearLayout>


                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_margin="@dimen/_10sdp"
                    android:gravity="center"
                    android:orientation="vertical"
                    app:layout_constraintBottom_toBottomOf="parent"
                    app:layout_constraintTop_toBottomOf="@+id/linlogo"
                    app:layout_constraintVertical_bias="0.18"
                    tools:layout_editor_absoluteX="13dp">


                    <com.google.android.material.textfield.TextInputLayout
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:textColor="@color/black"
                        android:textColorHint="@color/black"

                        >

                        <EditText
                            android:id="@+id/name"
                            style="@style/Small.Text"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:background="@drawable/stroke_drawable_edditss"
                            android:hint="@string/name"

                            android:inputType="textEmailAddress"
                            android:textColor="@color/black"
                            android:textColorHint="@color/black" />
                    </com.google.android.material.textfield.TextInputLayout>

                    <com.google.android.material.textfield.TextInputLayout
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="10sp"
                        android:textColor="@color/black"
                        android:textColorHint="@color/black">

                        <EditText
                            android:id="@+id/breed"
                            style="@style/Small.Text"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:background="@drawable/stroke_drawable_edditss"
                            android:hint="@string/breed"
                            android:textColor="@color/black"
                            android:textColorHint="@color/black" />
                    </com.google.android.material.textfield.TextInputLayout>

                    <com.google.android.material.textfield.TextInputLayout
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="10sp"
                        android:textColor="@color/black"
                        android:textColorHint="@color/black">

                        <EditText
                            android:id="@+id/dob"
                            style="@style/Small.Text"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:background="@drawable/stroke_drawable_edditss"
                            android:editable="false"
                            android:hint="@string/date_of_birth"
                            android:textColor="@color/black"
                            android:textColorHint="@color/black" />
                    </com.google.android.material.textfield.TextInputLayout>

                    <com.google.android.material.textfield.TextInputLayout
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="10sp"
                        android:textColor="@color/black"
                        android:textColorHint="@color/black">

                        <EditText
                            android:id="@+id/allergies"
                            style="@style/Small.Text"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:background="@drawable/stroke_drawable_edditss"
                            android:hint="@string/allergies"
                            android:textColor="@color/black"
                            android:textColorHint="@color/black" />
                    </com.google.android.material.textfield.TextInputLayout>

                    <Spinner
                        android:id="@+id/gender_spinner"
                        android:layout_width="match_parent"
                        android:layout_height="55dp"
                        style="@style/Small.Text"
                        android:backgroundTint="#cc99a2"

                        android:layout_marginTop="10sp"
                        >

                    </Spinner>

                    <Spinner
                        android:id="@+id/type_spinner"
                        android:layout_width="match_parent"
                        android:layout_height="55dp"
                        android:backgroundTint="#cc99a2"
                        android:layout_marginTop="10sp">

                    </Spinner>

                    <Spinner
                        android:id="@+id/sterlization_spinner"
                        android:layout_width="match_parent"
                        android:layout_height="55dp"
                        android:layout_marginTop="10sp"
                        android:backgroundTint="#cc99a2"

                        >

                    </Spinner>

                    <Spinner
                        android:id="@+id/vet_spinner"
                        android:layout_width="match_parent"
                        android:layout_height="55dp"
                        android:layout_marginTop="10sp"
                        android:backgroundTint="#cc99a2"

                        >

                    </Spinner>


                    <Button
                        android:id="@+id/btn_save"
                        style="@style/Small.Text"
                        android:layout_width="match_parent"
                        android:layout_height="50dp"
                        android:layout_marginHorizontal="50dp"
                        android:layout_marginTop="20dp"
                        android:backgroundTint="#cc99a2"
                        android:text="@string/save"
                        android:textAllCaps="false"
                        android:textColor="@color/black"
                        android:textStyle="bold" />

                    <RelativeLayout
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginVertical="5dp"
                        android:paddingHorizontal="40dp">


                    </RelativeLayout>


                </LinearLayout>

            </androidx.constraintlayout.widget.ConstraintLayout>

        </ScrollView>



    </androidx.constraintlayout.widget.ConstraintLayout>
</layout>
